--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --background-header: rgb(33, 37, 41);
     --background-modal: rgb(10, 9, 8);
+    --background-modal-glass: rgba(10, 9, 8, 0.37);
     --letra-padrao:  rgb(255, 255, 255);
 }
 
@@ -15,6 +16,26 @@
     font-size: 16px;
 }
 
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+    outline: 0;
+    border: 2px solid var(--background-header);
+}
+
+
+input[type=button] {
+    background: none;
+    border: 0px;
+    cursor: pointer;
+}
+
 body,
 html {
     width: 100vw;
@@ -25,6 +46,31 @@ html {
 h1 {
     font-weight: normal;
     font-size: 2em;
+}
+
+h2 {
+    font-weight: normal;
+    font-size: 1.6em;
+    color: var(--letra-padrao);
+}
+
+fieldset{
+    padding: 10px;
+    border-radius: 7px;
+    display: flex;
+    border: 2px solid var(--letra-padrao);
+    flex-direction: column;
+}
+
+legend{
+    margin-left: 15px;
+    padding: 0px 10px;
+}
+
+.top-modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
@@ -91,7 +137,7 @@ li {
 }
 
 .agrupador-menu {
-    position: absolute;
+    position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -128,14 +174,14 @@ li {
 }
 
 #menu-hambuguer {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     display: none;
 }
 
 #menu-hambuguer img{
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     cursor: pointer;
 }
 
@@ -152,8 +198,99 @@ li {
 .gerador{
     width: 100%;
     height: 100%;
-    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.modal{
+    min-width: 600px;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    min-height: 50%;
+    background:var(--background-modal-glass);
+    box-shadow: 0px 0px 20px 9px rgb(107 107 107 / 37%);
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 20px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 50px 70px;
+    gap: 15px;
+}
+
+.retorno-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    min-height: 250px;
+    background-color: var(--background-header);
+    padding: 0px 10px 0px 10px;
+    border-radius: 15px;
+    border: 2px solid var(--letra-padrao);
+}
+
+.retorno {
+    resize: none;
+    background-color: var(--background-header);
+    border: none;
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px 10px 0px;
+}
+
+.btn-copiar {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0px;
+    cursor: pointer;
+    background-color: var(--background-header);
+    border: 2px solid var(--background-header);
+    border-radius: 50px;
+}
+
+.btn-copiar:hover {
+    background-color: var(--background-modal);
+    border: 2px solid var(--background-header);
+}
+
+.agrupador-mobile{
+    width: 100%;
+    height: auto;
+    gap: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.elemento-filtros {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+}
+
+label {
+    color: var(--letra-padrao);
+}
+
+input, option, select {
+    color: var(--background-modal);
+    width: 100%;
+}
+
+input, select {
+    color: var(--background-modal);
+    width: 100%;
+    height: 25px;
+    padding: 3px;
+    border: 2px solid var(--background-header);
+    border-radius: 7px;
+}
+
+
+
 
 
 
@@ -161,6 +298,10 @@ li {
 .modal-container {
     display: none;
 }
+
+
+
+
 
 @media (max-width: 800px) {
     #header {
@@ -181,5 +322,20 @@ li {
     #menu {
         display: none;
     }
+
+    .agrupador-menu {
+        position: absolute;
+    }
     
+    .modal{
+        width: 90%;
+        height: 90%;
+        min-width: 150px;
+        padding: 15px;
+    }
+
+    .gerador{
+        padding-top: 40px;
+    }
+
 }
