--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ input[type=button] {
     background: none;
     border: 0px;
     cursor: pointer;
+    width: 100%;
+    height: 70%;
+    background-color: var(--background-header);
+    color: var(--letra-padrao);
 }
 
 body,
@@ -60,6 +64,7 @@ fieldset{
     display: flex;
     border: 2px solid var(--letra-padrao);
     flex-direction: column;
+    gap: 15px;
 }
 
 legend{
@@ -126,7 +131,7 @@ li {
     position: absolute;
     top: 0px;
     left: 0px;
-    opacity: 0.18;
+    opacity: 0.35;
     z-index: 0;
     overflow: hidden;
 }
@@ -283,17 +288,18 @@ input, option, select {
 input, select {
     color: var(--background-modal);
     width: 100%;
-    height: 25px;
+    height: 30px;
     padding: 3px;
     border: 2px solid var(--background-header);
     border-radius: 7px;
 }
 
+.btn-gerar{
+    width: 100px;
+    display: flex;
+    align-items: end;
 
-
-
-
-
+}
 
 .modal-container {
     display: none;
