--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,21 @@
     font-size: 16px;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: var(--background-header);
+     border-radius: 15px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--background-modal);
+    border-radius: 20px;
+    border: 2px solid var(--background-header);
+  }
+
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
@@ -50,12 +65,14 @@ html {
 h1 {
     font-weight: normal;
     font-size: 2em;
+    cursor: default;
 }
 
 h2 {
     font-weight: normal;
     font-size: 1.6em;
     color: var(--letra-padrao);
+    cursor: default;
 }
 
 fieldset{
@@ -70,6 +87,7 @@ fieldset{
 legend{
     margin-left: 15px;
     padding: 0px 10px;
+    cursor: default;
 }
 
 .top-modal{
@@ -131,7 +149,7 @@ li {
     position: absolute;
     top: 0px;
     left: 0px;
-    opacity: 0.35;
+    opacity: 0.18;
     z-index: 0;
     overflow: hidden;
 }
@@ -146,7 +164,7 @@ li {
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 10px 0px 10px 0px;
+    padding: 0px;
     z-index: 5;
 }
 
@@ -164,6 +182,7 @@ li {
     height: 100%;
     overflow-y: auto;
     border-right: 1px solid ;
+    padding: 10px 0px;
 }
 
 #menu ul li {
@@ -182,12 +201,19 @@ li {
     height: 25px;
     width: 25px;
     display: none;
+    margin-top: 10px;
 }
 
 #menu-hambuguer img{
     height: 25px;
     width: 25px;
     cursor: pointer;
+}
+
+#background-modal {
+    border-radius: 15px;
+    background-color: var(--background-header);
+    opacity: 0.4;
 }
 
 .menu-open {
@@ -214,6 +240,7 @@ li {
     display: flex;
     flex-direction: column;
     min-height: 50%;
+    max-height: 90%;
     background:var(--background-modal-glass);
     box-shadow: 0px 0px 20px 9px rgb(107 107 107 / 37%);
     backdrop-filter: blur( 10px );
@@ -228,20 +255,26 @@ li {
     display: flex;
     width: 100%;
     height: 100%;
-    min-height: 250px;
-    background-color: var(--background-header);
-    padding: 0px 10px 0px 10px;
+    min-height: 150px;
+    padding: 10px;
     border-radius: 15px;
     border: 2px solid var(--letra-padrao);
+    position: relative;
 }
 
 .retorno {
     resize: none;
-    background-color: var(--background-header);
     border: none;
     width: 100%;
     height: 100%;
-    padding: 10px 10px 10px 0px;
+    padding: 0px 10px 0px 0px;
+    z-index: 9;
+    background: none;
+    min-height: 150px;
+    line-height: 21px;
+    font-size: 15px;
+    font-weight: lighter;
+    cursor: text
 }
 
 .btn-copiar {
@@ -292,6 +325,7 @@ input, select {
     padding: 3px;
     border: 2px solid var(--background-header);
     border-radius: 7px;
+    cursor: pointer;
 }
 
 .btn-gerar{
