--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   
   ::-webkit-scrollbar-track {
     background: var(--background-header);
-     border-radius: 15px;
+    border-radius: 15px;
   }
   
   ::-webkit-scrollbar-thumb {
@@ -44,6 +44,16 @@ select:focus {
     border: 2px solid var(--background-header);
 }
 
+.mensagem-inicial{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    font-weight: lighter;
+    text-align: center;
+}
 
 input[type=button] {
     background: none;
@@ -82,6 +92,7 @@ fieldset{
     border: 2px solid var(--letra-padrao);
     flex-direction: column;
     gap: 15px;
+    width: 100%;
 }
 
 legend{
@@ -149,7 +160,7 @@ li {
     position: absolute;
     top: 0px;
     left: 0px;
-    opacity: 0.18;
+    opacity: 0.4;
     z-index: 0;
     overflow: hidden;
 }
@@ -214,6 +225,9 @@ li {
     border-radius: 15px;
     background-color: var(--background-header);
     opacity: 0.4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu-open {
@@ -232,22 +246,25 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 4;
 }
 
 .modal{
     min-width: 600px;
     max-width: 800px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     min-height: 50%;
     max-height: 90%;
     background:var(--background-modal-glass);
-    box-shadow: 0px 0px 20px 9px rgb(107 107 107 / 37%);
-    backdrop-filter: blur( 10px );
-    -webkit-backdrop-filter: blur( 4px );
+    /* box-shadow: 0px 0px 20px 9px rgb(107 107 107 / 37%); */
+    backdrop-filter: blur( 35px );
+    -webkit-backdrop-filter: blur( 35px );
     border-radius: 20px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-    padding: 50px 70px;
+    padding: 35px 60px;
     gap: 15px;
 }
 
@@ -270,11 +287,11 @@ li {
     padding: 0px 10px 0px 0px;
     z-index: 9;
     background: none;
-    min-height: 150px;
+    min-height: 130px;
     line-height: 21px;
     font-size: 15px;
     font-weight: lighter;
-    cursor: text
+    cursor: default
 }
 
 .btn-copiar {
@@ -282,7 +299,7 @@ li {
     width: 100%;
     align-items: center;
     justify-content: center;
-    padding: 10px 0px;
+    padding: 5px 0px;
     cursor: pointer;
     background-color: var(--background-header);
     border: 2px solid var(--background-header);
@@ -323,7 +340,7 @@ input, select {
     width: 100%;
     height: 30px;
     padding: 3px;
-    border: 2px solid var(--background-header);
+    border: 2px solid #FFF;
     border-radius: 7px;
     cursor: pointer;
 }
@@ -332,18 +349,35 @@ input, select {
     width: 100px;
     display: flex;
     align-items: end;
+}
 
+#bt-gerar-cpf:hover {
+    background-color: var(--background-modal);
+    border: 2px solid var(--background-header);
 }
 
 .modal-container {
     display: none;
 }
 
+.loading{
+    width: 27px;
+    height: 27px;
+    border-radius: 50px;
+    border: 5px solid white;
+    border-top-color: transparent;
+    animation: loading 0.6s linear infinite;
+}
+
+@keyframes loading {
+    to{
+        transform: rotate(360deg);
+    }
+}
 
 
 
-
-@media (max-width: 800px) {
+@media (max-width: 890px) {
     #header {
         justify-content: center;
     }
@@ -366,11 +400,13 @@ input, select {
     .agrupador-menu {
         position: absolute;
     }
+
     
     .modal{
         width: 90%;
         height: 90%;
-        min-width: 150px;
+        min-width: 250px;
+        max-width: 500px;
         padding: 15px;
     }
 
