--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ html {
     width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0);
+    position: relative;
 }
 
 h1 {
@@ -136,7 +137,7 @@ legend {
     cursor: default;
 }
 
-#sobre-nos {
+#sobre-site {
     height: 100%;
     display: flex;
     align-items: center;
@@ -147,7 +148,7 @@ legend {
     border: 1px solid var(--background-header);
 }
 
-#sobre-nos:hover {
+#sobre-site:hover {
     background-color: var(--background-modal);
     border: 1px solid var(--letra-padrao);
 }
@@ -368,6 +369,37 @@ select {
     animation: loading 0.6s linear infinite;
 }
 
+.close {
+    display: none !important;
+}
+
+#sobre-nos {
+    overflow: auto;
+    padding: 35px 60px;
+    justify-content: start;
+    max-width: 500px;
+    min-width: 500px;
+}
+
+#divContainer{
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    max-width: 500px;
+}
+
+#divContainer p {
+    text-align: justify;
+    overflow: auto;
+    padding: 0px 7px 0px 0px;
+    line-height: 21px;
+}
+
+
 @keyframes loading {
     to {
         transform: rotate(360deg);
@@ -381,7 +413,7 @@ select {
         justify-content: center;
     }
 
-    #sobre-nos {
+    #sobre-site {
         display: none;
     }
 
@@ -411,6 +443,12 @@ select {
 
     .gerador {
         padding-top: 40px;
+    }
+    
+    #sobre-nos {
+        min-width: 250px;
+        max-width: 500px;
+        padding: 15px;
     }
 
 }
