--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,10 @@ select {
     overflow: auto;
     padding: 0px 7px 0px 0px;
     line-height: 21px;
+}   
+
+.copiado{
+    background-color: rgb(17 255 20);
 }
 
 
